Fork pelican default theme

--- a/content/posts/2016-11-01-welcome.md
+++ b/content/posts/2016-11-01-welcome.md
@@ -1,9 +1,8 @@
-Title: First Version of SaltyRTC Published!
+Title: In Development
 Date: 2016-11-01
 Category: News
 Tags: release, news
 Authors: Lennart Grahl, Danilo Bargen
-Summary: The first version of SaltyRTC has been published.
+Summary: This website is still under construction
 
-We are happy to announce that the first version of the SaltyRTC protocol
-specification has been released!
+This website is still under construction. Check back later!
